[package]
authors = [
    "Jacek Całusiński <forger@forger.pl>",
    "Jacek Chmiel <jchmiel@collective-sense.com>"
]
name = "colored_logger"
version = "0.5.2"
edition = "2018"

[features]
default = []

# Add current thread name to log messages
thread_name = []

[dependencies]
chrono = "0.4.10"
colored = "1.9.2"
flexi_logger = "0.14.8"
log = "0.4.8"
atty = "0.2.14"
clap = "2.33.0"
failure = "0.1.6"
